added account deletion route and user rename route - fixed various bugs
